api/api_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
spec:
  selector:
    matchLabels:
      app: api
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api
    spec:
      automountServiceAccountToken: false
      containers:
        - name: api
          image: localhost:32000/api:r9
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
