api/api_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: api
  labels:
    name: api
spec:
  containers:
    - name: api
      image: localhost:32000/api:r1
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 5000
