api/api_service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      protocol: TCP
