api/api_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  labels:
    name: service-ingress
spec:
  rules:
    - host: service.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-svc
                port:
                  number: 80
